--- a/30 - Whack A Mole/index-START.html
+++ b/30 - Whack A Mole/index-START.html
@@ -1,42 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Whack A Mole!</title>
-  <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Whack A Mole!</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Whack-a-mole!</h1>
+    <h2>
+      Score:<span class="score">0</span> Highscore:<span class="highscore"
+        >0</span
+      >
+    </h2>
+    <button onClick="startGame()">Start!</button>
 
-  <h1>Whack-a-mole! <span class="score">0</span></h1>
-  <button onClick="startGame()">Start!</button>
+    <div class="game">
+      <div class="hole hole1">
+        <div class="mole"></div>
+      </div>
+      <div class="hole hole2">
+        <div class="mole"></div>
+      </div>
+      <div class="hole hole3">
+        <div class="mole"></div>
+      </div>
+      <div class="hole hole4">
+        <div class="mole"></div>
+      </div>
+      <div class="hole hole5">
+        <div class="mole"></div>
+      </div>
+      <div class="hole hole6">
+        <div class="mole"></div>
+      </div>
+    </div>
 
-  <div class="game">
-    <div class="hole hole1">
-      <div class="mole"></div>
-    </div>
-    <div class="hole hole2">
-      <div class="mole"></div>
-    </div>
-    <div class="hole hole3">
-      <div class="mole"></div>
-    </div>
-    <div class="hole hole4">
-      <div class="mole"></div>
-    </div>
-    <div class="hole hole5">
-      <div class="mole"></div>
-    </div>
-    <div class="hole hole6">
-      <div class="mole"></div>
-    </div>
-  </div>
+    <script>
+      const holes = document.querySelectorAll(".hole");
+      const scoreBoard = document.querySelector(".score");
+      const highscoreBoard = document.querySelector(".highscore");
+      const moles = document.querySelectorAll(".mole");
+      let lastHole;
+      let timeUp = false;
+      let score = 0;
+      let highscore = localStorage.getItem("highscore") || 0;
 
-<script>
-  const holes = document.querySelectorAll('.hole');
-  const scoreBoard = document.querySelector('.score');
-  const moles = document.querySelectorAll('.mole');
+      function randomTime(min, max) {
+        return Math.round(Math.random() * (max - min) + min);
+      }
 
-</script>
-</body>
+      function randomHole(holes) {
+        const idx = Math.floor(Math.random() * holes.length);
+        const hole = holes[idx];
+        if (hole === lastHole) {
+          return randomHole(holes);
+        }
+        lastHole = hole;
+        return hole;
+      }
+
+      function peep() {
+        const time = randomTime(200, 1000);
+        const hole = randomHole(holes);
+        hole.classList.add("up");
+        setTimeout(() => {
+          hole.classList.remove("up");
+          if (!isTimeUp) peep();
+        }, time);
+      }
+
+      function startGame() {
+        highscore = localStorage.getItem("highscore") || 0;
+        scoreBoard.textContent = 0;
+        highscoreBoard.textContent = highscore;
+
+        isTimeUp = false;
+        score = 0;
+        peep();
+        setTimeout(() => {
+          isTimeUp = true;
+          localStorage.setItem("highscore", highscore);
+        }, 10000);
+      }
+
+      function bonk(e) {
+        if (!e.isTrusted) return;
+        score++;
+        this.classList.remove("up");
+        scoreBoard.textContent = score;
+        if (score >= highscore) {
+          highscore = score;
+          highscoreBoard.textContent = highscore;
+        }
+      }
+
+      moles.forEach((mole) => mole.addEventListener("click", bonk));
+    </script>
+  </body>
 </html>
